--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -127,6 +127,7 @@ form label {
   cursor: pointer;
   stroke: #3182bd;
   stroke-width: 1.5px;
+  stroke-opacity: 0.1;
 }
 
 .node text {
@@ -139,4 +140,5 @@ line.link {
   fill: none;
   stroke: #9ecae1;
   stroke-width: 1.5px;
+  opacity: 1;
 }
