--- a/app/views/sprints/_form.html.haml
+++ b/app/views/sprints/_form.html.haml
@@ -11,10 +11,10 @@
 = text_field :sprint, :desc
 
 = label :sprint, :start, 'Start'
-= date_select :sprint, :start
+= date_select :sprint, :start, {:include_blank => true}
 
 = label :sprint, :end, 'End'
-= date_select :sprint, :end
+= date_select :sprint, :end, {:include_blank => true}
 
 = label :sprint, :hours, 'Hours'
 = number_field :sprint, :hours
@@ -27,5 +27,3 @@
 
 = label :temp, :repeat, 'repeat'
 = select :temp, :repeat, ['Never', 'TR Weekly', 'MWF Weekly', 'Weekly']
-
-%p #{local_variables}
