--- a/app/views/sprints/index.html.haml
+++ b/app/views/sprints/index.html.haml
@@ -1,6 +1,6 @@
 %h1 All Sprints
 = render :partial => 'table_filter'
-%table#sprints
+%table{:id => 'sprints', :class => 'table table-striped table-hover'}
   %thead
     %tr
       %th #
