--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,12 +20,15 @@ html, body {
   color: DarkSlateGrey;
   font-family: Tahoma, Verdana, sans-serif;
   font-size: 10pt;
+  background: url('bg.jpg');
+//  opacity: .5;
 }
 div.container {
   margin-left: auto;
   margin-right: auto;
   padding: 0 20px 0px;
-  width: 800px;
+  background: rgba(0,0,0,0);
+//  width: 800px;
 }
 header {
 	padding-top: 20px;
@@ -58,7 +61,7 @@ nav ul {
 }
 nav ul li {
 	list-style-type: none;
-	display:inline-block;
+//	display:inline-block;
 	padding: 0.2em 0;
 }
 nav ul li a {
